Correct spelling, Remove commented code, Change dark mode switch to button

--- a/src/02_DesignTokens/025_Peripherals/Radii/_Radii.scss
+++ b/src/02_DesignTokens/025_Peripherals/Radii/_Radii.scss
@@ -7,6 +7,7 @@
 $radii: (
     square: 0px,
     rounded: 6px,
+    round: 20px,
 );
 
 // Radius Design Tokens Config
